tests/paczka1/fuzzy1/40931414.err
Error in line 1: hIdn1q S751 18,3
Error in line 8: 3AWxTc7cP S751 67,9
Error in line 5: Jp1z A494 18,6
Error in line 22: hctSAaLUS A335 36,77
Error in line 18: hIdn1q S647 96,2
Error in line 24: hIdn1q S"51 16",2
Error in line 32: qa2OwFq A335 18,45
Error in line 28: Jp1z S751 51,8
